--- a/configs/local.yaml
+++ b/configs/local.yaml
@@ -1,9 +1,9 @@
 # config/local.yaml
 
-env: "local" # Окружение - local, dev или prod
+env: "dev" # Окружение - local, dev или prod
 db_connection: "user=postgres password=1611 dbname=RollAndPlay sslmode=disable"
 storage_path: "./storage/storage.db" # файл, в котором будет храниться наша БД
 http_server: # конфигурация нашего http-сервера
-  address: "localhost:8082"
+  address: "localhost:8080"
   timeout: 4s
   idle_timeout: 30s
